syntax = "proto3";

package xmc.srv.core.searchmeta;

option go_package = "searchmeta";

message Meta {
  uint32 per_page = 1;
  uint32 count = 2;
  uint32 total = 3;
}
